fix: fix app overflow when toast appears after creating subtask

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -17,11 +17,6 @@
   padding-left: $navbar-width;
   padding-top: 0;
 
-  @include from($tablet) {
-    max-height: 100%;
-    overflow: hidden;
-  }
-
   @media only screen and (max-width: $tablet) {
     height: auto;
   }
