--- a/src/routes/list/List.scss
+++ b/src/routes/list/List.scss
@@ -13,6 +13,7 @@
     @include from($tablet) {
       display: initial;
     }
+    overflow: hidden;
   }
 
   &__mobile {
